--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <script type="text/javascript" src="canvas/Canvas.js"></script>
         <script type="text/javascript" src="canvas/Hall1.js"></script>
         <script type="text/javascript" src="canvas/GridContent/ParkingSpot.js"></script>
+        <script type="text/javascript" src="canvas/AssemblyList.js"></script>
+        <script type="text/javascript" src="canvas/GridContent/Assembly/AssemblyLine.js"></script>
+        <script type="text/javascript" src="canvas/GridContent/Assembly/StraightSN.js"></script>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
