--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
         <script type="text/javascript" src="canvas/GridContent/ParkingSpot.js"></script>
         <script type="text/javascript" src="canvas/AssemblyList.js"></script>
         <script type="text/javascript" src="canvas/GridContent/Assembly/AssemblyLine.js"></script>
+        <script type="text/javascript" src="canvas/GridContent/Assembly/StraightNS.js"></script>
         <script type="text/javascript" src="canvas/GridContent/Assembly/StraightSN.js"></script>
+        <script type="text/javascript" src="canvas/GridContent/Assembly/StraightEW.js"></script>
+        <script type="text/javascript" src="canvas/GridContent/Assembly/StraightWE.js"></script>
+        <script type="text/javascript" src="canvas/GridContent/Assembly/CornerEN.js"></script>
+        <script type="text/javascript" src="canvas/GridContent/Assembly/CornerES.js"></script>
+        <script type="text/javascript" src="canvas/GridContent/Assembly/CornerNE.js"></script>
+        <script type="text/javascript" src="canvas/GridContent/Assembly/CornerNW.js"></script>
+        <script type="text/javascript" src="canvas/GridContent/Assembly/CornerSE.js"></script>
+        <script type="text/javascript" src="canvas/GridContent/Assembly/CornerSW.js"></script>
+        <script type="text/javascript" src="canvas/GridContent/Assembly/CornerWN.js"></script>
+        <script type="text/javascript" src="canvas/GridContent/Assembly/CornerWS.js"></script>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
