--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script type="text/javascript" src="canvas/GridContent/Assembly/StraightEW.js"></script>
         <script type="text/javascript" src="canvas/GridContent/Assembly/StraightWE.js"></script>
         <script type="text/javascript" src="canvas/GridContent/PackageDropper.js"></script>
+        <script type="text/javascript" src="canvas/Packages/Package1.js"></script>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
