--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
         <script type="text/javascript" src="canvas/GridContent/Assembly/StraightEW.js"></script>
         <script type="text/javascript" src="canvas/GridContent/Assembly/StraightWE.js"></script>
         <script type="text/javascript" src="canvas/GridContent/PackageDropper.js"></script>
+        <script type="text/javascript" src="canvas/Packages/MainPackage.js"></script>
         <script type="text/javascript" src="canvas/Packages/Package1.js"></script>
+        <script type="text/javascript" src="canvas/Packages/Package2.js"></script>
+        <script type="text/javascript" src="canvas/Packages/Package3.js"></script>
+        <script type="text/javascript" src="canvas/Packages/Package4.js"></script>
+        <script type="text/javascript" src="canvas/Packages/Package5.js"></script>
+        <script type="text/javascript" src="canvas/Packages/Package6.js"></script>
+        <script type="text/javascript" src="canvas/Packages/Package7.js"></script>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
@@ -29,6 +36,7 @@
             Canvas();
         }
         </script>
+        <button class="btn btn-primary" onclick="ButtonSwitchHall()">Switch Hall</button>
         <div class="form">
             <form>
                 <h1>Formulier</h1>
