--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <script type="text/javascript" src="canvas/Canvas.js"></script>
         <script type="text/javascript" src="canvas/Hall1.js"></script>
         <script type="text/javascript" src="canvas/Hall2.js"></script>
+        <script type="text/javascript" src="canvas/Truck.js"></script>
         <script type="text/javascript" src="canvas/Weather.js"></script>
         <script type="text/javascript" src="canvas/GridContent/ParkingSpot.js"></script>
         <script type="text/javascript" src="canvas/AssemblyList.js"></script>
@@ -38,36 +39,34 @@
         </script>
         <button class="btn btn-primary" onclick="ButtonSwitchHall()">Switch Hall</button>
         <div class="form">
-            <form>
-                <h1>Formulier</h1>
-                <div class="form-group">
-                  <label for="exampleInputEmail1">Lengte</label>
-                  <input type="number" class="form-control" id="exampleInputEmail1" max=15>
-                </div>
-                <div class="form-group">
-                  <label for="exampleInputPassword1">Breedte</label>
-                  <input type="number" class="form-control" id="exampleInputPassword1" max=2>
-                </div>
-                <div class="form-group">
-                    <label for="intervall">Aankomst interval</label>
-                    <input type="number" class="form-control" id="intervall" max=200>
-                  </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Type</label>
-                    <select class="form-control">
-                        <option>Koud transport</option>
-                        <option>Breekbaar transport</option>
-                        <option>Algemeen transport</option>
-                        <option>Pallets</option>
-                        <option>Snelkoerier</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Actieradius</label>
-                    <input type="text" class="form-control" id="exampleInputPassword1">
-                  </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-              </form>
+          <h1>Formulier</h1>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Lengte</label>
+            <input type="number" class="form-control" id="inputLength" min=4 max=10>
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Breedte</label>
+            <input type="number" class="form-control" id="inputWidth" min=4 max=6>
+          </div>
+          <div class="form-group">
+              <label for="intervall">Aankomst interval</label>
+              <input type="number" class="form-control" id="intervall" min=0 max=200>
+            </div>
+          <div class="form-group">
+              <label for="exampleInputPassword1">Type</label>
+              <select class="form-control" id="type">
+                  <option value="cold">Koud transport</option>
+                  <option value="fragile">Breekbaar transport</option>
+                  <option value="common" >Algemeen transport</option>
+                  <option value="pallets">Pallets</option>
+                  <option value="fast">Snelkoerier</option>
+              </select>
+          </div>
+          <div class="form-group">
+              <label for="exampleInputPassword1">Actieradius</label>
+              <input type="text" class="form-control" id="actionradius">
+            </div>
+          <button type="submit" class="btn btn-primary" onclick="ButtonForm()">Submit</button>
         </div>
         <div class="section-town">
           <input type="text" style="width: 200px;" class="form-control" id="town" value="Amsterdam">
